# tlbx-1

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs  package-lock.json  package.json
.cargo/: config.toml
.zencoder/rules/: repo.md
docs/: BUGS.md  DEVELOPER_ONBOARDING.md  TODO.md  end-user-overview.md  intro.md  mosaic.md  mosaic_gap_report.md  s4_video_gap_report.md  user-manual.md
docs-site/: docusaurus.config.js  package-lock.json  package.json
docs-site/.storybook/: main.js  preview.js
docs-site/src/css/: custom.css
docs-site/src/pages/: index.mdx
docs-site/stories/: overview.mdx
scripts/: dev-build-run.js  find-bin.js  header-template.txt  version-sync.js
scripts/packaging/: build.js
scripts/packaging/linux/: build-package.sh  install.sh
scripts/packaging/mac/: build-installer.sh
scripts/packaging/windows/: build-installer.ps1  installer.nsi
src/: lib.rs  main.rs
src/ui/: .prettierignore  all.slint  animate_engine.slint  browser.slint  globals.slint  grainrust.slint  raw_components.slint  simpkick_engine.slint  tape_engine.slint  testing_grounds.slint  tlbx1.slint
src/ui/components/: buttons.slint  index.slint  inputs.slint  knobs.slint  labels.slint  meters.slint  selectors.slint  sliders.slint  toggles.slint  viz.slint
src/ui/devices/: g8_device.slint  granulator_device.slint  silk_device.slint
src/ui/engines/: animate_engine.slint  syndrm_engine.slint  tape_engine.slint  void_seed_engine.slint
src/ui/figma/: GrainRust_Interface.fig
src/ui/photoshop/: VU_Meteres.psd  Waveform_View_V1.psd
src/ui/theme/: dark_theme.slint  default_theme.slint  index.slint  light_theme.slint  theme.slint  theme_manager.slint
