[package]
name = "tlbx-1"
version = "0.1.8"
edition = "2024"

[lib]
name = "tlbx1_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
slint = { version = "1.14.1", default-features = false, features = ["std", "software-renderer-systemfonts", "compat-1-2"] }
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2", features = ["opengl"] }
keyboard-types = { version = "0.6.2", default-features = false }
# ... rest of dependencies ...
fundsp = "0.20"
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
parking_lot = "0.12"
hound = "3.4"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "2"
mime_guess = "2"
tiny_http = "0.12"
env_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
softbuffer = { version = "0.4.6", default-features = false }
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
softbuffer = { version = "0.4.6", default-features = false, features = ["kms", "x11"] }

[build-dependencies]
slint-build = "1.14.1"

[features]
default = ["renderer-software"]
ui-testing = ["slint/backend-winit", "slint/std"]
renderer-software = ["slint/renderer-software"]
renderer-opengl = ["slint/renderer-femtovg", "slint/std", "slint/backend-winit"]
renderer-vulkan = ["slint/renderer-skia-vulkan", "slint/std", "slint/backend-winit"]
